# peer-chat

./: .gitignore  Cargo.toml  Dockerfile  README.md  aks.md  ca-cluster.yaml  deployment.yaml  deployment.yml  frontend.yaml  ing-peerchat.yaml  ingress.yaml  rabbitmq.yaml  sonar-project.properties  user-service.yaml
message-relay/: Cargo.toml  Dockerfile
message-relay/entity/: Cargo.toml
message-relay/entity/src/: chat.rs  conversation.rs  lib.rs  message.rs  mod.rs  prelude.rs  user.rs  user_chat.rs  user_conversation.rs
message-relay/migration/: Cargo.toml
message-relay/migration/src/: lib.rs  m20220424_000000_create_table.rs  m20220424_213500_create_table_user.rs  m20220424_213700_create_table_message.rs  m20220427_190400_create_table_chat.rs  m20220427_190400_create_table_convs.rs
message-relay/migrations/2022-04-30-114522_create_users/: up.sql
message-relay/migrations/2022-04-30-120211_create_messages/: up.sql
message-relay/migrations/2022-04-30-120538_create_chats/: down.sql  up.sql
message-relay/migrations/2022-04-30-120851_create_user_chats/: down.sql  up.sql
message-relay/migrations/2022-04-30-121649_create_fk_user_chats/: down.sql  up.sql
message-relay/migrations/2022-04-30-123302_create_fk_messages/: down.sql  up.sql
message-relay/src/: api.rs  db_helper.rs  db_helpers.rs  main.rs  schema.rs
message-relay/src/api/: db_helper.rs  mod.rs  mq_helper.rs  routes.rs
message-relay/src/models/: chat.rs  message.rs  mod.rs  user.rs  (+1 more)
user-service/: .env_example  Cargo.toml  Dockerfile  docker_start.sh
user-service/src/: main.rs  schema.rs
(+73 files in other folders)
