[package]
name = "message-relay"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9.0"
actix-web = "^4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "8"
sea-orm = { version = "0.7.1", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ] }
entity = { path = "entity" }
migration = { path = "migration" }