[package] 
name = "message-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9.0"
chrono = "0.4.19"
actix-web = "^4"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
amiquip = "0.4.2"
actix-web-prom = "0.6.0"